# python-ml-container

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: configure.sh  initialize.sh
.devcontainer/cpu/: devcontainer.json
.devcontainer/with-cuda/: devcontainer.json
python_ml_container/: example.py
